<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputCalcAge"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="18"
            android:background="@drawable/edit_text_human_age"
            android:hint="@string/main_screen_input_human_age"
            android:inputType="number"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonCalcAge"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:padding="15dp"
            android:text="@string/main_screen_button_human_age"
            android:textColor="@color/white"
            app:cornerRadius="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_static_result_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_result_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>